# KubeHound

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  404.html  ADVANCED.md  Architecture.excalidraw  CNAME  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  SECURITY.md  docker-bake.hcl  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  static-analysis.datadog.yml
.github/: .dependabot.yml  CODEOWNERS
.github/ISSUE_TEMPLATE/: new-attack.md
.github/workflows/: buildx.yml  datadog-static-analysis.yml  docker.yml  docs.yml  lint.yml  linter.yml  release.yml  system-test.yml  test-extract.yml  test.yml  try-access-secrets.yml  unit-test.yml
architecture/: index.html
comparison/: index.html
configs/: embed.go
contributing/: index.html
css/: extra.css
datadog/: .terraform.lock.hcl  README.md  dashboard.tf  providers.tf  span-metrics.tf
docs/: ATTACKS.md  Architecture.excalidraw  architecture.md  comparison.md  contributing.md  faq.md  index.md  references.md  terminology.md  workshop.md
dsl/: TODO.txt
exp/: README.md
faq/: index.html
graph-dsl/: TODO.txt  pom.xml
images/: ROLE_BIND_overall_view.excalidraw  kubehound-detailed.excalidraw  kubehound-high-level.excalidraw
queries/: index.html
references/: index.html
scripts/: enrich-third-party-licences.py  kubehound.bat  kubehound.sh
scripts/dashboard-insomnihack24k/: README.md  pyproject.toml
search/: search_index.json
terminology/: index.html
test/: README.md  create-cluster-resources.sh
workshop/: index.html
(+867 files in other folders)
